--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1784,7 +1784,7 @@
   }
 
   .container-2lgZY8::after {
-    content: "My love ❤";
+    content: "Kocham cię ❤";
     position: fixed;
     top: 275px;
     bottom: 85px;
